Fix HTML structure and update image paths

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clearpath</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images\favicon-32x32.png" type="image/png">
+    <link rel="icon" href="favicon-32x32.png" type="image/png">
 </head>
 <body>
     <main>
         <nav>
         <div class="right">
-            <img src="images/logo.png"alt="ClearPath">
+            <img src="logo.png"alt="ClearPath">
         </div>
         <div class="left">
             <button id="toggle-modal">ADD NEW TASK</button>
@@ -60,4 +60,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
